...
            android:layout_marginTop="4dp"
            android:background="@drawable/blue_4"
            tools:layout_editor_absoluteX="-40dp"
            tools:layout_editor_absoluteY="420dp" />

        <ImageView
            android:id="@+id/imgMonte"
            android:layout_width="110dp"
            android:layout_height="173dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            app:srcCompat="@drawable/costas"
            tools:layout_editor_absoluteX="-40dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listaCartasJogador"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp" />
    </FrameLayout>

    <FrameLayout
...
        app:layout_constraintBottom_toTopOf="@+id/layIdentificadorDeck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layMesa"
        app:layout_constraintVertical_bias="0.506">

        <ImageView
            android:id="@+id/icPedirUno"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/mao_uno_nao_selecionado" />

        <TextView
            android:id="@+id/txtPedirUno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="10dp"
            android:text="UNO!"
            android:textColor="#595959"
...
